# LogsAnalizer

./: Analizer.cpp  CMakeLists.txt  ClientNode.cpp  Connection.cpp  Connection.hpp  Conteiners.hpp  Includes.hpp  Looks of JSON messages.json  Message.hpp  Node.hpp
Client/: Client.cpp  Client.hpp  LogsCollector.hpp
Manager/: MessageHandler.hpp  Server.cpp  Server.hpp
